--- a/ModernWebStore.Domain.Tests/ModernWebStore.Domain.Tests.csproj
+++ b/ModernWebStore.Domain.Tests/ModernWebStore.Domain.Tests.csproj
@@ -45,15 +45,22 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scope\CategoryScopeTests.cs" />
+    <Compile Include="Scope\UserScopeTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ModernWebStore.SharedKernel\ModernWebStore.SharedKernel.csproj">
+      <Project>{065CCABD-98E9-4ED6-90A6-979C6A02859E}</Project>
+      <Name>ModernWebStore.SharedKernel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ModerWebStore.Domain\ModerWebStore.Domain.csproj">
       <Project>{8a98b9e1-5922-49fe-a775-69181506dc9d}</Project>
       <Name>ModerWebStore.Domain</Name>
