--- a/ModernWebStore.Domain.Tests/ModernWebStore.Domain.Tests.csproj
+++ b/ModernWebStore.Domain.Tests/ModernWebStore.Domain.Tests.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scope\CategoryScopeTests.cs" />
+    <Compile Include="Scope\ProductScopeTests.cs" />
     <Compile Include="Scope\UserScopeTests.cs" />
   </ItemGroup>
   <ItemGroup>
