--- a/ModernWebStore.Infra/ModernWebStore.Infra.csproj
+++ b/ModernWebStore.Infra/ModernWebStore.Infra.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Persistence\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CategoryRepository.cs" />
+    <Compile Include="Repositories\OrderRepository.cs" />
+    <Compile Include="Repositories\ProductRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
