--- a/ModernWebStore.ApplicationService/ModernWebStore.ApplicationService.csproj
+++ b/ModernWebStore.ApplicationService/ModernWebStore.ApplicationService.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9D89F710-EF46-4F71-A85C-01E251D9816B}</ProjectGuid>
+    <ProjectGuid>{B3419A1B-4AB6-45CC-A2E9-3F797A153736}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ModernWebStore.Infra</RootNamespace>
-    <AssemblyName>ModernWebStore.Infra</AssemblyName>
+    <RootNamespace>ModernWebStore.ApplicationService</RootNamespace>
+    <AssemblyName>ModernWebStore.ApplicationService</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,16 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,26 +40,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Persistence\DataContexts\StoreDataContext.cs" />
-    <Compile Include="Persistence\IUnitOfWork.cs" />
-    <Compile Include="Persistence\Map\CategoryMap.cs" />
-    <Compile Include="Persistence\Map\OrderItemMap.cs" />
-    <Compile Include="Persistence\Map\OrderMap.cs" />
-    <Compile Include="Persistence\Map\ProductMap.cs" />
-    <Compile Include="Persistence\Map\UserMap.cs" />
-    <Compile Include="Persistence\UnitOfWork.cs" />
+    <Compile Include="ApplicationServiceBase.cs" />
+    <Compile Include="CategoryApplicationService.cs" />
+    <Compile Include="OrderApplicationService.cs" />
+    <Compile Include="ProductApplicationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\CategoryRepository.cs" />
-    <Compile Include="Repositories\OrderRepository.cs" />
-    <Compile Include="Repositories\ProductRepository.cs" />
-    <Compile Include="Repositories\UserRepository.cs" />
+    <Compile Include="UserApplicationService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
+    <ProjectReference Include="..\ModernWebStore.Infra\ModernWebStore.Infra.csproj">
+      <Project>{9d89f710-ef46-4f71-a85c-01e251d9816b}</Project>
+      <Name>ModernWebStore.Infra</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ModernWebStore.SharedKernel\ModernWebStore.SharedKernel.csproj">
+      <Project>{065ccabd-98e9-4ed6-90a6-979c6a02859e}</Project>
+      <Name>ModernWebStore.SharedKernel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ModerWebStore.Domain\ModerWebStore.Domain.csproj">
       <Project>{8a98b9e1-5922-49fe-a775-69181506dc9d}</Project>
       <Name>ModerWebStore.Domain</Name>
